apps/base/openwebui/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: openwebui
  labels:
    http-ingress: "true"
    network-policies: enforced
